fixed spacing of landing page elements

--- a/src/components/collection/collection.css
+++ b/src/components/collection/collection.css
@@ -117,7 +117,7 @@ button.add-button:hover {
 	text-align: start;
 	position: fixed;
   padding: 0;
-	margin-top: -30px;
+	margin: -30px auto 0 30px;
 	z-index: 1;
 }
 
